# mus

./: .gitignore  Pipfile  README.md  setup.cfg
c/: autotest
rtmus/: __init__.py  chord.py  circuits.py  log.py  metronome.py  midi.py  note.py  overlay.py  performance.py  scale.py  track.py  util.py
tests/: sync.py
tracks/: first.py  second.py
tracks/first/: first.bwproject
tracks/second/: second.bwproject
