[metadata]
name = rtmus
author = David Sonder
author_email = dave.sonder@protonmail.ch
description = My music midi thingy
version = 0.1.0
url = https://github.com/bltbitblt/rtmus
keywords = music
classifiers =
  Development Status :: 4 - Beta
  Programming Language :: Python :: 3.9
license_files =
  LICENSE

[options]
python_requires = >= 3.9
packages = find:
zip_safe = False
install_requires =
    python-rtmidi
    attrs
    click
    uvloop

[options.extras_require]
dev =
    black
    isort
    python-language-server
    flake8
    flake8-bugbear
    flake8-debugger
    flake8-isort
    flake8-string-format
    flake8-tuple
