[metadata]
name = rtmus
author = David Sonder
author_email = dave.sonder@protonmail.ch
description = My music midi thingy
version = 0.1.0
url = https://github.com/bltbitblt/rtmus
keywords = music
classifiers =
  Development Status :: 4 - Beta
  Programming Language :: Python :: 3.9
license_files =
  LICENSE

[options]
python_requires = >= 3.9
packages = find:
zip_safe = False
install_requires =
    python-rtmidi
    attrs
    click
    uvloop @ git+https://github.com/MagicStack/uvloop@6ef69a797db0afe781b5ddcd74691767f8261a53

[options.extras_require]
dev =
    black
    isort
    python-language-server
    flake8
    flake8-bugbear
    flake8-debugger
    flake8-isort
    flake8-string-format
    flake8-tuple

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude =
    .git,
    __pycache__,
    docs/source/conf.py,
    old,
    build,
    dist

[pycodestyle]
max-line-length = 88
extend-ignore = E203, W503
exclude =
    .git,
    __pycache__,
    docs/source/conf.py,
    old,
    build,
    dist
