[metadata]
name = rtmus
author = David Sonder
author_email = dave.sonder@protonmail.ch
description = My music midi thingy
version = 0.1.0
url = https://github.com/bltbitblt/rtmus
keywords = music
classifiers =
  Development Status :: 4 - Beta
  Programming Language :: Python :: 3.9
license_files =
  LICENSE

[options]
python_requires = >= 3.9
packages = find:
zip_safe = False
install_requires =
    python-rtmidi
    attrs
    click
    intervaltree
    uvloop @ git+https://github.com/MagicStack/uvloop@6ef69a797db0afe781b5ddcd74691767f8261a53

[options.extras_require]
dev =
    black
    isort
    python-language-server
    flake8
    flake8-bugbear
    flake8-debugger
    flake8-isort
    flake8-string-format
    flake8-tuple

[flake8]
ignore =
    # missing whtespaces
    E231,
    E203,
    # too many leading ### in a block comment
    E266,
    # line too long (managed by black)
    E501,
    # Line break occurred before a binary operator (this is not PEP8 compatible)
    W503,
    # do not enforce existence of docstrings
    D100,
    D101,
    D102,
    D103,
    D104,
    D105,
    D106,
    D107,
    # needed because of https://github.com/ambv/black/issues/144
    D202,
    C901,
max-line-length = 88
max-complexity = 10
doctests = True

[tool:isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
combine_as_imports=True
line_length=88
